# pasteque

./: .gitignore  LICENSE.md  README.md  clean_instance.sh  pyproject.toml  requirements.in  requirements.txt
dict/: french
paste/: admin.py  context_processors.py  forms.py  middleware.py  models.py  renderers.py  tools.py  urls.py  views.py
paste/fixtures/: initial.json
paste/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
paste/migrations/: 0001_initial.py  0002_auto_20180513_1644.py  0003_alter_language_id_alter_paste_id.py
paste/static/css/: main.css  pygments-highlight.css
paste/static/js/: paste.js
paste/templates/: 404.html  500.html  base.html
paste/templates/paste/: expired.html  history.html  index.html  locked.html  paste-meta.html  show-form.html  show-pygments.html  show-raw.html
paste/templatetags/: filters.py
share/: language-dml.sql  requirements.pip  uwsgi.ini  uwsgi.txt
webtools/: settings.py  urls.py  wsgi.py
